add jwt + email sending
